--- a/TestSpringInitializrInIdea/pom.xml
+++ b/TestSpringInitializrInIdea/pom.xml
@@ -33,15 +33,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.ow2.chameleon.database</groupId>
-            <artifactId>datasource-hsql</artifactId>
-            <version>0.2.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.bitbucket.bradleysmithllc.etlunit</groupId>
-            <artifactId>hsqldb-database</artifactId>
-            <version>1.8.16</version>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
