--- a/TestSpringInitializrInIdea/src/main/resources/application.properties
+++ b/TestSpringInitializrInIdea/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:sqlserver://DESKTOP-MIRUVK9\\SQLEXPRESS;databaseName=Polyclinic
+spring.datasource.username=Admin
+spring.datasource.password=admin
