--- a/TestSpringInitializrInIdea/src/main/resources/application.properties
+++ b/TestSpringInitializrInIdea/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://DESKTOP-MIRUVK9\\SQLEXPRESS;databaseName=Polyclinic
-spring.datasource.username=Admin
-spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
+spring.datasource.username=springuser
+spring.datasource.password=ThePassword
