something is done

--- a/TaxiStation/src/main/resources/application.properties
+++ b/TaxiStation/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/taxi_station
+spring.datasource.username=taxi_station_admin
+spring.datasource.password=VeryDifficultPass
 
