--- a/TaxiStation/src/main/resources/application.properties
+++ b/TaxiStation/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+server.port=8081
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/taxi_station
-spring.datasource.username=taxi_station_admin
+spring.datasource.username=root
 spring.datasource.password=VeryDifficultPass
 
